Adding some CSS and changing directory of the recipes html files

--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes\lasagna.html">Lasagna</a></li>
-        <li><a href="recipes\biriyani.html">Biriyani</a></li>
-        <li><a href="recipes\threebeansalad.html">ThreeBeanSalad</a></li>
-    </ul>    
-    
+    <nav class="navbar">
+        <div class="logo">
+            <h1>Odin Recipes</h1>
+        </div>
+        <ul class="nav-links">
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/biriyani/biriyani.html">Biriyani</a></li>
+            <li><a href="recipes/threebeansalad.html">ThreeBeanSalad</a></li>
+            <li><a href="recipes/lemonade.html">Lemonade</a></li>
+            <li><a href="recipes/alooparatha/alooparatha.html">Aloo Paratha</a></li>
+            <li><a href="recipes/eggsalad.html">Egg Salad</a></li>
+            <li><a href="recipes/fruitsalad/fruitsalad.html">Fruit Salad</a></li>
+            <li><a href="recipes/grilledcheesesandwich.html">Grilled Cheese Sandwich</a></li>
+            <li><a href="recipes/masalachai.html">Masala Chai</a></li>
+            <li><a href="recipes/paneerbuttermasala.html">Paneer Butter Masala</a></li>
+            <li><a href="recipes/vegetablestirfry.html">Vegetable Stir Fry</a></li>
+        </ul>
+
+    </nav>
 </body>
+
 </html>
