--- a/recipes/biriyani/biriyani.html
+++ b/recipes/biriyani/biriyani.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="biriyani.css">
+    <title>Biriyani</title>
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <div class="receipe-card">
+    <a href="../../index.html">Home</a>
     <h1>Biriyani Recipe</h1>
     <img src="https://www.allrecipes.com/thmb/OSnM1bLiY6Autp_jzMUDMPZo_1g=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/68506-756cc95b67234d6492ab18b982de583d.jpg"
         alt="Biriyani Image">
@@ -44,6 +46,7 @@
         <li>Cover tightly and cook on low flame (dum) for 20–25 minutes.</li>
         <li>Let it rest for 10 minutes before serving. Mix gently and enjoy!</li>
       </ol>
+    </div>
 </body>
 
 </html>
